# CLIP_JAX

./: .gitignore  pyproject.toml  requirements.txt
clip_jax/: clip.py  model.py
