[tool.poetry]
name = "clip-jax"
version = "0.1.3"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "clip_jax"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.11.0"
scipy = "^1.8.0"
ftfy = "^6.1.1"
regex = "^2022.4.24"
tqdm = "^4.64.0"
dm-haiku = "0.0.5"
jax = "^0.3.10"
jaxlib = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
